<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/ToolbarStyle.WithBackArrow"
        android:id="@+id/tbSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_56"
        app:title="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_36"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8">

        <EditText
            style="@style/EditTextSearchStyle"
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <ImageView
            style="@style/IconClearSearchStyle"
            android:id="@+id/ivClearSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_clear_search"
            android:visibility="gone" />

    </FrameLayout>

    <ImageView
        android:id="@+id/ivError"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        tools:src="@drawable/no_connection"
        android:visibility="gone" />

    <TextView
        style="@style/CaptionStyle"
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_16"
        tools:text="@string/no_connection"
        android:visibility="gone" />

    <Button
        style="@style/ButtonSmallStyle"
        android:layout_width="@dimen/width_91"
        android:layout_height="@dimen/height_36"
        android:layout_gravity="center"
        android:id="@+id/btnRefresh"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/refresh"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/llHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/CaptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_22"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_50"
                android:layout_marginBottom="@dimen/margin_20"
                android:text="@string/you_looked_for" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rwHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                style="@style/ButtonSmallStyle"
                android:id="@+id/btnClearHistory"
                android:layout_width="@dimen/width_148"
                android:layout_height="@dimen/height_36"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/clear_history" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>