<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlayerActivity">

    <ImageView
        android:id="@+id/ivArrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:src="@drawable/ic_arrow_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_56">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_28">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glLeft24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="@dimen/margin_24"
                android:orientation="vertical" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glRight24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_end="@dimen/margin_24"
                android:orientation="vertical" />

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_26"
                app:layout_constraintDimensionRatio="1:1"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@id/glRight24"
                app:layout_constraintStart_toEndOf="@id/glLeft24"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/placeholder" />

            <TextView
                style="@style/TitleStyle.Medium22"
                android:id="@+id/tvTrackName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                app:layout_constraintStart_toStartOf="@id/glLeft24"
                app:layout_constraintEnd_toEndOf="@id/glRight24"
                app:layout_constraintTop_toBottomOf="@id/ivCover"
                tools:text="Yesterday (Remastered 2009)" />

            <TextView
                style="@style/TitleStyle.Medium14"
                android:id="@+id/tvArtistName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                app:layout_constraintStart_toStartOf="@id/glLeft24"
                app:layout_constraintEnd_toEndOf="@id/glRight24"
                app:layout_constraintTop_toBottomOf="@id/tvTrackName"
                tools:text="The Beatles" />

            <ImageButton
                android:id="@+id/btnAddToPlaylist"
                android:layout_width="@dimen/width_51"
                android:layout_height="@dimen/height_51"
                android:background="@drawable/add_to_playlist"
                app:layout_constraintStart_toStartOf="@id/glLeft24"
                app:layout_constraintTop_toTopOf="@id/btnPlay"
                app:layout_constraintBottom_toBottomOf="@id/btnPlay" />

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="@dimen/width_84"
                android:layout_height="@dimen/height_84"
                android:layout_marginTop="@dimen/margin_38"
                android:background="@drawable/play"
                app:layout_constraintStart_toStartOf="@id/glLeft24"
                app:layout_constraintEnd_toEndOf="@id/glRight24"
                app:layout_constraintTop_toBottomOf="@id/tvArtistName" />

            <ImageButton
                android:id="@+id/btnAddToFavorites"
                android:layout_width="@dimen/width_51"
                android:layout_height="@dimen/height_51"
                android:background="@drawable/add_to_favorites"
                app:layout_constraintEnd_toEndOf="@id/glRight24"
                app:layout_constraintTop_toTopOf="@id/btnPlay"
                app:layout_constraintBottom_toBottomOf="@id/btnPlay" />

            <TextView
                style="@style/TitleStyle.Medium14"
                android:id="@+id/tvPlayTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@id/glLeft24"
                app:layout_constraintEnd_toEndOf="@id/glRight24"
                app:layout_constraintTop_toBottomOf="@id/btnPlay"
                tools:text="0:30" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glLeft16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="@dimen/margin_16"
                android:orientation="vertical" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glRight16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_end="@dimen/margin_16"
                android:orientation="vertical" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/textsBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_tags="tvDurationTitleTag, tvAlbumTitleTag, tvYearTitleTag, tvGenreTitleTag, tvCountryTitleTag"
                app:barrierDirection="end" />

            <TextView
                style="@style/AttributeTitleStyle"
                android:id="@+id/tvDurationTitle"
                app:layout_constraintTag="tvDurationTitleTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_39"
                android:text="@string/duration"
                app:layout_constraintStart_toStartOf="@id/glLeft16"
                app:layout_constraintTop_toBottomOf="@id/tvPlayTime" />

            <TextView
                style="@style/AttributeValueStyle"
                android:id="@+id/tvDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintBaseline_toBaselineOf="@id/tvDurationTitle"
                app:layout_constraintStart_toStartOf="@id/textsBarrier"
                app:layout_constraintEnd_toEndOf="@id/glRight16"
                tools:text="5:35" />

            <TextView
                style="@style/AttributeTitleStyle"
                android:id="@+id/tvAlbumTitle"
                app:layout_constraintTag="tvAlbumTitleTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_17"
                android:text="@string/album"
                app:layout_constraintStart_toStartOf="@id/glLeft16"
                app:layout_constraintTop_toBottomOf="@id/tvDurationTitle" />

            <TextView
                style="@style/AttributeValueStyle"
                android:id="@+id/tvAlbum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintBaseline_toBaselineOf="@id/tvAlbumTitle"
                app:layout_constraintStart_toStartOf="@id/textsBarrier"
                app:layout_constraintEnd_toEndOf="@id/glRight16"
                tools:text="Yesterday (Remastered 2009)" />

            <TextView
                style="@style/AttributeTitleStyle"
                android:id="@+id/tvYearTitle"
                app:layout_constraintTag="tvYearTitleTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_17"
                android:text="@string/year"
                app:layout_constraintStart_toStartOf="@id/glLeft16"
                app:layout_constraintTop_toBottomOf="@id/tvAlbumTitle" />

            <TextView
                style="@style/AttributeValueStyle"
                android:id="@+id/tvYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintBaseline_toBaselineOf="@id/tvYearTitle"
                app:layout_constraintStart_toStartOf="@id/textsBarrier"
                app:layout_constraintEnd_toEndOf="@id/glRight16"
                tools:text="1965" />

            <TextView
                style="@style/AttributeTitleStyle"
                android:id="@+id/tvGenreTitle"
                app:layout_constraintTag="tvGenreTitleTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_17"
                android:text="@string/genre"
                app:layout_constraintStart_toStartOf="@id/glLeft16"
                app:layout_constraintTop_toBottomOf="@id/tvYearTitle" />

            <TextView
                style="@style/AttributeValueStyle"
                android:id="@+id/tvGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintBaseline_toBaselineOf="@id/tvGenreTitle"
                app:layout_constraintStart_toStartOf="@id/textsBarrier"
                app:layout_constraintEnd_toEndOf="@id/glRight16"
                tools:text="Rock" />

            <TextView
                style="@style/AttributeTitleStyle"
                android:id="@+id/tvCountryTitle"
                app:layout_constraintTag="tvCountryTitleTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_17"
                android:text="@string/country"
                app:layout_constraintStart_toStartOf="@id/glLeft16"
                app:layout_constraintTop_toBottomOf="@id/tvGenreTitle" />

            <TextView
                style="@style/AttributeValueStyle"
                android:id="@+id/tvCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintBaseline_toBaselineOf="@id/tvCountryTitle"
                app:layout_constraintStart_toStartOf="@id/textsBarrier"
                app:layout_constraintEnd_toEndOf="@id/glRight16"
                tools:text="Great Britain" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>